Added resizing terminal. Styling font with attributes for unix systems inplemented. Windows kernel refactored and cleared out some grammer mistakes. (Windows tested and unix jet to be tested).

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,5 @@
 Windows logic clear aan passen before after cursor
+
+ideas:
+
+https://apple.stackexchange.com/questions/33736/can-a-terminal-window-be-resized-with-a-terminal-command
